Fix border radius on mobile

--- a/styles.css
+++ b/styles.css
@@ -35,8 +35,7 @@ body {
     width: 40%;
     object-fit: cover;
     object-position: left center;
-    border-top-left-radius: 10px;
-    border-bottom-left-radius: 10px;
+    border-radius: 10px 0 0 10px;
 }
 
 #card-content {
@@ -45,8 +44,7 @@ body {
     flex-direction: column;
     gap: var(--spacing-300);
     padding: var(--spacing-400) var(--spacing-500);
-    border-top-right-radius: 10px;
-    border-bottom-right-radius: 10px;
+    border-radius: 0 10px 10px 0;
 }
 
 #card-content p {
@@ -171,10 +169,12 @@ body {
     #card-img {
         max-width: 100%;
         width: 100%;
+        border-radius: 10px 10px 0 0;
     }
 
     #card-content {
         padding: var(--spacing-400) var(--spacing-400) var(--spacing-200) var(--spacing-400);
+        border-radius: 0 0 10px 10px;
     }
 
     #card-footer {
